[package]
name = "graburl"
description = "Get all urls from website"
authors = ["tenqz"]
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
repository = "https://github.com/tenqz/graburl"
readme = "README.md"
keywords = ["cli", "web", "parser", "parse", "html"]
categories = ["parsing", "web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/graburl"

[[bin]]
name = "graburl"
path = "src/main.rs"

[dependencies]
ahref = "0.2.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
