[package]
name = "graburl"
description = "Get all url's from website"
authors = ["tenqz"]
version = "0.1.7"
edition = "2021"
rust-version = "1.72.0"
repository = "https://github.com/tenqz/graburl"
readme = "README.md"
keywords = ["cli", "web", "parser", "parse", "html"]
categories = ["parsing", "web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/graburl"

[lib]
name = "graburl"
path = "src/lib.rs"

[[bin]]
name = "graburl"
path = "src/main.rs"

[dependencies]
ahref = "0.3.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.9.5"
